# PyCustomCollections

./: CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml  python-lint.yml  python-mypy.yml  python-testing.yml
PyCustomCollections/: CustomDataStructures.py  __init__.py
docs/: 404.html  index.html  sitemap.xml
docs/docs/: 404.html
docs/docs/reference/PyCustomCollections/: index.html
docs/reference/PyCustomCollections/CustomDataStructures/: index.html
docs/search/: search_index.json
reference/PyCustomCollections/: index.html
search/: search_index.json
tests/: test_dummy_func.py  test_froxendict.py  test_indexedtable.py  test_keyedtable.py  test_namespacedict.py
