[metadata]
name = PyCustomCollections
version = 1.0
author = Ryan Henrichson
author_email = orcephrye@gmail.com
description = Custom data types and collections
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/orcephrye/PyCustomCollections
classifiers =
    Programming Language :: Python :: 3
    License :: GNU GENERAL PUBLIC LICENSE v3
    Operating System :: Linux

[options]
packages = PyCustomCollections
python_requires = >=3.8